--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Your Girlfriend's Special Website</title>
+    <title>(=˃ᆺ˂=)</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script defer src="script.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Your Special Place!</h1>
-    </header>
+
 
     <main>
         <!-- Sanrio Corner -->
@@ -17,13 +15,16 @@
             <div class="image-container">
                 <img src="https://cdn.discordapp.com/attachments/429983945786916884/1148765662429331486/cats-5888277_640.png" alt="Sanrio Image">
             </div>
+        </div>       
+
+        <div id="pokemon">
+            <!-- Dynamically added Pokémon will appear here -->
         </div>
 
         <!-- Pokémon World -->
-        <div class="centered-div">
-            <div id="pokemon">
-                <!-- Pokémon will be dynamically added here -->
-            </div>
+        <div id="pokedex-section">
+            <img id="pokedex-entry" src="" alt="Pokedex Entry">
+            <span id="pokedex-text"></span>
         </div>
 
         <!-- Special Message -->
@@ -37,7 +38,7 @@
     </main>
 
     <footer>
-        <h3>Love, [Your Name]</h3>
+        <h3>Love, Niko</h3>
     </footer>
 </body>
 </html>
