--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>(=˃ᆺ˂=)</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script defer src="script.js"></script>
+    <meta property="og:title" content="Nya">
+    <meta property="og:description" content=":3">
+    <meta property="og:image" content="https://steamuserimages-a.akamaihd.net/ugc/2071133537172165896/EA0C3DCC21FC2DD65C5680CF411A7349F988D8BD/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false">
+    <meta property="og:url" content="https://rocksiza.github.io/vi/">
 </head>
 <body>
 
