--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <meta property="og:description" content=":3">
     <meta property="og:image" content="https://steamuserimages-a.akamaihd.net/ugc/2071133537172165896/EA0C3DCC21FC2DD65C5680CF411A7349F988D8BD/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false">
     <meta property="og:url" content="https://rocksiza.github.io/vi/">
+    <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/429983945786916884/1149001467441725520/b6fea275d5a47930a84aaa3658b63178-removebg-preview.png">
 </head>
 <body>
 
-
+    <header>
+        <img id="header-image" src="https://media.discordapp.net/attachments/429983945786916884/1149000383482580992/Y2K_Aesthetic_Flash_Sheet_-_Streetwear_Design__1_-removebg-preview_1.png" alt="Header Image">
+    </header>
     <main>
         <!-- Sanrio Corner -->
         <div class="centered-div">
